--- a/src/app/home/scss/_home.scss
+++ b/src/app/home/scss/_home.scss
@@ -19,11 +19,10 @@
 		}
 
 		.content {
-			border: 2px solid #ffffff;
 			display: inline-block;
 		}
 
-		.content h2 { margin: 0; }
+		.content h2 { margin: 0; margin-top: -4px; }
 		.content h2, 
 		.content h4 { letter-spacing: .1em; color: #ffffff; }
 
@@ -77,7 +76,7 @@
 
 			.content {
 				margin-top: 223.5px;
-				border: 2px solid #f2f2f2;
+				border: 2px solid #ffffff;
 				padding: 36px 116px; 
 			}
 
@@ -165,8 +164,8 @@
 				width: 350px;
 				position: absolute;
 				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
+				right: 0;
+				transform: translate(0, -50%);
 			}
 
 		}
@@ -243,8 +242,8 @@
 				width: 350px;
 				position: absolute;
 				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
+				right: 0;
+				transform: translate(0, -50%);
 			}
 
 		}
