--- a/src/app/resume/html/resume.html
+++ b/src/app/resume/html/resume.html
@@ -1,9 +1,11 @@
 <div class="resume">
 	<section class="hero">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<h1>Resume</h1>
+		<div class="overlay">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>Resume</h1>
+					</div>
 				</div>
 			</div>
 		</div>
