--- a/src/main.css
+++ b/src/main.css
@@ -7428,7 +7428,7 @@ h3 {
   @media screen and (max-width: 991px) {
     /* line 7, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .hero {
-      background: url("../content/images/home-phone.jpg");
+      background: url("../content/images/home-hero-phone.jpg");
       background-size: cover;
       background-position-y: 51px;
       height: 365px; }
@@ -7452,7 +7452,7 @@ h3 {
   @media screen and (min-width: 992px) {
     /* line 7, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .hero {
-      background: url("../content/images/home-hero.jpg");
+      background: url("../content/images/home-hero-desktop.jpg");
       background-size: cover;
       background-position-y: -40px;
       height: 640px; }
@@ -7624,81 +7624,85 @@ h3 {
   line-height: 320px; }
 
 /* line 2, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-.resume h1 {
-  color: #D75C37;
-  margin: 0; }
-
-@media screen and (max-width: 991px) {
-  /* line 5, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .resume .hero {
-    background: grey;
-    height: 320px; }
+.resume .hero {
+  height: 320px; }
   /* line 6, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+  .resume .hero .overlay {
+    background: rgba(0, 0, 0, 0.3); }
+  /* line 10, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
   .resume .hero h1 {
-    text-align: center;
-    margin-top: 167.5px; } }
+    color: #fff;
+    margin: 0; }
+  @media screen and (max-width: 991px) {
+    /* line 2, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+    .resume .hero {
+      background: url("../content/images/resume-phone.jpg");
+      background-size: cover;
+      background-position-y: 43px; }
+      /* line 20, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+      .resume .hero .overlay {
+        height: 320px; }
+      /* line 24, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+      .resume .hero h1 {
+        text-align: center;
+        margin-top: 167.5px; } }
+  @media screen and (min-width: 992px) {
+    /* line 2, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+    .resume .hero {
+      background: url("../content/images/resume-desktop.jpg");
+      background-size: cover;
+      background-position-y: 43px; }
+      /* line 36, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+      .resume .hero h1 {
+        line-height: 320px; } }
 
-@media screen and (min-width: 992px) {
-  /* line 11, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .resume .hero h1 {
-    line-height: 320px; }
-  /* line 12, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .resume .hero {
-    height: 320px;
-    background: url("../content/images/book.jpg");
-    background-size: cover;
-    background-position-y: 430px; } }
-
-/* line 20, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-.main-skill-container {
+/* line 45, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+.resume .skill .main-skill-container {
   text-align: center; }
 
-@media screen and (max-width: 991px) {
-  /* line 31, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .sub-skill-container {
-    text-align: center;
-    padding-bottom: 35px; }
-  /* line 36, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .sub-skill-container.divider {
-    border-bottom: 1px solid #d2d2d2; }
-  /* line 40, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .image {
-    text-align: center;
-    margin-top: 46px;
-    margin-bottom: 15px; }
-  /* line 46, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .main-skill {
-    color: #D75C37;
-    border-bottom: 10px solid #d2d2d2;
-    display: inline-block;
-    margin-top: 35px;
-    margin-bottom: 35px; } }
+/* line 49, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+.resume .skill .sub-skill-container {
+  text-align: center; }
 
-@media screen and (min-width: 992px) {
-  /* line 56, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .skill {
-    padding-top: 120px;
-    padding-bottom: 120px; }
-  /* line 60, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .sub-skill-container {
-    text-align: center; }
-  /* line 64, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .image {
-    text-align: center;
-    margin-bottom: 15px; }
-  /* line 69, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-  .main-skill {
-    color: #D75C37;
-    border-bottom: 10px solid #d2d2d2;
-    display: inline-block; } }
-
-/* line 76, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
-.sub-skill {
+/* line 53, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+.resume .skill .sub-skill {
   display: block;
   font-size: 16px;
   line-height: 28px;
   color: #81888D;
   margin-bottom: 5px; }
+
+/* line 61, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+.resume .skill .image {
+  text-align: center;
+  margin-bottom: 15px; }
+
+/* line 66, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+.resume .skill .main-skill {
+  color: #D75C37;
+  border-bottom: 10px solid #d2d2d2;
+  display: inline-block; }
+
+@media screen and (max-width: 991px) {
+  /* line 74, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+  .resume .skill .sub-skill-container {
+    padding-bottom: 50px; }
+  /* line 78, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+  .resume .skill .sub-skill-container.divider {
+    border-bottom: 1px solid #d2d2d2; }
+  /* line 82, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+  .resume .skill .image {
+    margin-top: 64px; }
+  /* line 86, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+  .resume .skill .main-skill {
+    margin-top: 32px;
+    margin-bottom: 32px; } }
+
+@media screen and (min-width: 992px) {
+  /* line 43, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+  .resume .skill {
+    padding-top: 120px;
+    padding-bottom: 120px; } }
 
 /* line 1, /Users/David/Desktop/git/resume/src/app/shared/scss/_circle.scss */
 .circle {
