added overlay on projects page

--- a/src/app/projects/html/projects.html
+++ b/src/app/projects/html/projects.html
@@ -1,13 +1,11 @@
 <section class="projects">
 	<div class="hero">
-		<div class="container"> 
-			<div class="row">
-				<div class="col-md-12">
-					<h1>Projects</h1>
-					<p>
-						welcome to my projects
-					</p>
-					<div ng-bind="projectsVM.greeting"></div>
+		<div class="overlay">
+			<div class="container"> 
+				<div class="row">
+					<div class="col-md-12">
+						<h1>Projects</h1>
+					</div>
 				</div>
 			</div>
 		</div>
