--- a/src/app/contact/html/contact.html
+++ b/src/app/contact/html/contact.html
@@ -1,9 +1,11 @@
 <section class="contacts">
 	<div class="hero">
-		<div class="container"> 
-			<div class="row">
-				<div class="col-md-12">
-					<h1>Contact</h1>
+		<div class="overlay">
+			<div class="container"> 
+				<div class="row">
+					<div class="col-md-12">
+						<h1>Contact</h1>
+					</div>
 				</div>
 			</div>
 		</div>
