--- a/src/app/contact/scss/_contact.scss
+++ b/src/app/contact/scss/_contact.scss
@@ -1,9 +1,29 @@
 .contacts {
-	h1 { font-family: OpenSans-Bold; margin: 0; }
-	.hero { height: 320px;
-		background: url('../content/images/iphone2.jpg');
-		background-size: cover;	
-		background-position-y: 1395px;
+	
+	h1 { margin: 0; }
+	.hero { 
+
+		height: 320px;
+
+		h1 { 
+			line-height: 320px;
+			color: #fff;
+		}
+
+		.overlay {
+			background: rgba(0, 0, 0, .5);
+		}
+
+		@media screen and (max-width: $screen-sm-max) { 
+			background: url('../content/images/iphone21.jpg');
+			background-size: cover;	
+		}
+
+		@media screen and (min-width: $screen-md-min) {
+			background: url('../content/images/iphone23.jpg');
+			background-size: cover;	
+			background-position-y: 1427px;
+		}
 	}
-	.hero h1 { line-height: 320px; }
+	
 }
