imported tic-tac-toe style

--- a/src/main.scss
+++ b/src/main.scss
@@ -62,4 +62,6 @@
 @import "app/shared/scss/global";
 @import "app/shared/scss/headings";
 @import "app/shared/scss/nav";
+@import "app/tic-tac-toe/scss/tic-tac-toe";
+
 
