--- a/src/app/tic-tac-toe/html/tic-tac-toe.html
+++ b/src/app/tic-tac-toe/html/tic-tac-toe.html
@@ -1,9 +1,11 @@
 <div class="tic-tac-toe">
 	<section class="hero">
-		<div class="container"> 
-			<div class="row">
-				<div class="col-md-12">
-					<h3>Welcome to my Tic-Tac-Toe game</h3>
+		<div class="overlay">
+			<div class="container"> 
+				<div class="row">
+					<div class="col-md-12">
+						<h1>Tic Tac Toe</h1>
+					</div>
 				</div>
 			</div>
 		</div>
