--- a/src/app/tic-tac-toe/html/tic-tac-toe.html
+++ b/src/app/tic-tac-toe/html/tic-tac-toe.html
@@ -11,31 +11,73 @@
 		</div>
 	</section>
 
-	<section class="board">
+	<section class="content">
 		<div class="container">
-			
-			<div class="board-title">Current Player:</div>
-		 	<div class="board-value" ng-bind="ticTacToeVM.currentPlayer"></div>
-
-			<table>
-				<tr>
-					<td ng-bind="ticTacToeVM.board[0]" ng-click="ticTacToeVM.playTurn(0)"></td>
-					<td ng-bind="ticTacToeVM.board[1]" ng-click="ticTacToeVM.playTurn(1)"></td>
-					<td ng-bind="ticTacToeVM.board[2]" ng-click="ticTacToeVM.playTurn(2)"></td>
-				</tr>
-				<tr>
-					<td ng-bind="ticTacToeVM.board[3]" ng-click="ticTacToeVM.playTurn(3)"></td>
-					<td ng-bind="ticTacToeVM.board[4]" ng-click="ticTacToeVM.playTurn(4)"></td>
-					<td ng-bind="ticTacToeVM.board[5]" ng-click="ticTacToeVM.playTurn(5)"></td>
-				</tr>
-				<tr>
-					<td ng-bind="ticTacToeVM.board[6]" ng-click="ticTacToeVM.playTurn(6)"></td>
-					<td ng-bind="ticTacToeVM.board[7]" ng-click="ticTacToeVM.playTurn(7)"></td>
-					<td ng-bind="ticTacToeVM.board[8]" ng-click="ticTacToeVM.playTurn(8)"></td>
-				</tr>
-			</table>
-			<button name="button" ng-click="ticTacToeVM.restart()">Restart</button>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="board-title">Current Player:</div>
+				 	<div class="board-value" ng-bind="ticTacToeVM.currentPlayer"></div>
+				</div>
+			</div>
 		</div>
+	</section>
+
+	<section class="board">
+		 <div class= "container">
+		 	<div class="row">
+		 		<div class="col-md-12 square-container ">
+		 			<div class="square right-bottom" 
+		 				ng-bind="ticTacToeVM.board[0]" 
+		 				ng-click="ticTacToeVM.playTurn(0)">
+		 			</div><!--
+		 			--><div class="square right-bottom" 
+			 			ng-bind="ticTacToeVM.board[1]" 
+			 			ng-click="ticTacToeVM.playTurn(1)">
+			 		</div><!--
+		 			--><div class="square bottom" 
+		 				ng-bind="ticTacToeVM.board[2]" 
+		 				ng-click="ticTacToeVM.playTurn(2)">
+		 			</div>
+		 		</div>
+		 	</div>
+		 	<div class="row">
+		 		<div class="col-md-12 square-container ">
+		 			<div class="square right-bottom" 
+			 			ng-bind="ticTacToeVM.board[3]" 
+			 			ng-click="ticTacToeVM.playTurn(3)">
+			 		</div><!--
+		 			--><div class="square right-bottom" 
+			 			ng-bind="ticTacToeVM.board[4]" 
+			 			ng-click="ticTacToeVM.playTurn(4)">
+			 		</div><!--
+		 			--><div class="square bottom" 
+			 			ng-bind="ticTacToeVM.board[5]" 
+			 			ng-click="ticTacToeVM.playTurn(5)">
+			 		</div>
+		 		</div>
+		 	</div>
+		 	<div class="row">
+		 		<div class="col-md-12 square-container ">
+		 			<div class="square right" 
+			 			ng-bind="ticTacToeVM.board[6]" 
+			 			ng-click="ticTacToeVM.playTurn(6)">
+			 		</div><!--
+		 			--><div class="square right" 
+			 			ng-bind="ticTacToeVM.board[7]" 
+			 			ng-click="ticTacToeVM.playTurn(7)">
+			 		</div><!--
+		 			--><div class="square" 
+			 			ng-bind="ticTacToeVM.board[8]" 
+			 			ng-click="ticTacToeVM.playTurn(8)">
+			 		</div>
+		 		</div>
+		 	</div>
+		 	<div class="row">
+		 		<div class="col-md-12">
+					<button name="button" ng-click="ticTacToeVM.restart()">Restart</button>
+		 		</div>
+		 	</div>
+		 </div>
 	</section>
 </div>
 
