updated contact page

--- a/src/app/contact/html/contact.html
+++ b/src/app/contact/html/contact.html
@@ -1,5 +1,5 @@
-<section class="contacts">
-	<div class="hero">
+<div class="contacts">
+	<section class="hero">
 		<div class="overlay">
 			<div class="container"> 
 				<div class="row">
@@ -9,5 +9,20 @@
 				</div>
 			</div>
 		</div>
-	</div>
-</section>
+	</section>
+
+	<section class="contact">
+		<div class="container">
+			<div class="content">
+				<div>Email: yanwenwwang@gmail.com</div>
+				<a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4">
+					linkedIn
+				</a>
+				<a href="https://github.com/Yanwenwang">
+					Github
+				</a>
+			</div>
+		</div>
+	</section>
+
+</div>
